# weaviate-agents-python-client

./: .pre-commit-config.yaml  README.md  makefile  mypy.ini  publishing.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: main.yaml  release.yaml
bash/: run_unit_tests.sh
docs/: README.rst  conf.py  index.rst  modules.rst  requirements.txt  weaviate_agents.classes.rst  weaviate_agents.personalization.classes.rst  weaviate_agents.personalization.rst  weaviate_agents.query.classes.rst  weaviate_agents.query.rst  weaviate_agents.rst  weaviate_agents.transformation.classes.rst  weaviate_agents.transformation.rst
test/: test_imports.py  test_serialise.py
test/personalization_agent/: test_personalization_agent.py  test_query.py
test/personalization_agent/classes/: test_query.py
test/query_agent/: test_query_model.py
test/transformation_agent/: test_transformation_model.py
weaviate_agents/: __init__.py  base.py  errors.py  serialise.py  utils.py
weaviate_agents/classes/: __init__.py  core.py  personalization.py  query.py
weaviate_agents/personalization/: __init__.py  personalization_agent.py  query.py
weaviate_agents/personalization/classes/: __init__.py  persona.py  query.py  request.py  response.py
weaviate_agents/query/: __init__.py  query_agent.py  search.py
weaviate_agents/query/classes/: __init__.py  collection.py  request.py  response.py
weaviate_agents/transformation/: __init__.py  transformation_agent.py
weaviate_agents/transformation/classes/: __init__.py  operation.py
