[project]
name = "weaviate-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "weaviate-client>=4.11.0",
]


[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml] >6.2",
    "wheel >= 0.38.1",
]
build-backend = 'setuptools.build_meta'

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
]
